feat(orc8r) squash all optional agw device on register
