# orc8r/cloud/go/services/orchestrator/obsidian/models/conversion.go
@@ -23,6 +23,7 @@ import (
 
 	"magma/orc8r/cloud/go/models"
 	"magma/orc8r/cloud/go/orc8r"
+	"magma/orc8r/cloud/go/services/bootstrapper"
 	"magma/orc8r/cloud/go/services/configurator"
 	"magma/orc8r/cloud/go/storage"
 	merrors "magma/orc8r/lib/go/errors"
@@ -144,6 +145,18 @@ func (m *MagmadGateway) GetMagmadGateway() *MagmadGateway {
 }
 
 func (m *MagmadGateway) GetAdditionalWritesOnCreate() []configurator.EntityWriteOperation {
+	if m.Device == nil {
+		return []configurator.EntityWriteOperation{
+			configurator.NetworkEntity{
+				Type:        orc8r.MagmadGatewayType,
+				Key:         string(m.ID),
+				Name:        string(m.Name),
+				Description: string(m.Description),
+				Config:      m.Magmad,
+			},
+		}
+	}
+
 	return []configurator.EntityWriteOperation{
 		configurator.NetworkEntity{
 			Type:        orc8r.MagmadGatewayType,
@@ -239,8 +252,44 @@ func (m *MagmadGateway) FromBackendModels(ent configurator.NetworkEntity, device
 	if err == nil {
 		m.Tier = TierID(tierTK.Key)
 	}
+	PopulateRegistrationInfo(context.Background(), m, ent.NetworkID)
 
 	return m
+}
+
+func PopulateRegistrationInfos(ctx context.Context, gateways map[string]*MagmadGateway, networkID string) (map[string]*MagmadGateway, error) {
+	for gid, gateway := range gateways {
+		g, err := PopulateRegistrationInfo(ctx, gateway, networkID)
+		if err != nil {
+			return nil, err
+		}
+		gateways[gid] = g
+	}
+	return gateways, nil
+}
+
+// PopulateRegistrationInfo will populate the given gateway's RegistrationInfo if its device is nil
+func PopulateRegistrationInfo(ctx context.Context, gateway *MagmadGateway, networkID string) (*MagmadGateway, error) {
+	if gateway.Device != nil {
+		return gateway, nil
+	}
+
+	regToken, err := bootstrapper.GetToken(ctx, networkID, string(gateway.ID), true)
+	if err != nil {
+		return nil, err
+	}
+
+	regInfo, err := bootstrapper.GetGatewayRegistrationInfo(ctx)
+	if err != nil {
+		return nil, err
+	}
+
+	gateway.RegistrationInfo = &models.RegistrationInfo{
+		DomainName:        &regInfo.DomainName,
+		RegistrationToken: &regToken,
+		RootCa:            &regInfo.RootCa,
+	}
+	return gateway, nil
 }
 
 func (m *MagmadGateway) ToEntityUpdateCriteria(existingEnt configurator.NetworkEntity) []configurator.EntityUpdateCriteria {
